syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Server.ChatApp.Protos";
package ChatRequestQueriesPkg;

service ChatRequestQueryRPCs{
	rpc GetReceiveRequests(Shared.Empty) returns(CRQResult);
	rpc GetSendRequests(Shared.Empty) returns(CRQResult);
}

message CRQResult{
	bool IsSuccessful = 1;
	repeated Shared.MessageInfo Messages = 2;
	repeated ChatRequestItemMsg Items = 3;
}

message ChatRequestItemMsg{
	string ChatRequestId = 1;
	string UserId = 2;
	string DisplayName = 3;
    string RequestedAt = 4;
	string ImageUrl = 5;
}